Added some last minute changes

--- a/XML_Report.tex
+++ b/XML_Report.tex
@@ -86,7 +86,7 @@ This update forced us to adjust our artwork class to include a category variable
 the category elements in the XML DTD.
 
 Another idea for an interesting XQuery was to have different ways of structuring important 
-events. An event ID and a manager were mentioned. The ID existed in the use case diagram, 
+events. An event ID and a manager were mentioned. The ID existed in the class diagram, 
 but the manager did not. By adding this, we not only created the XML documents and their 
 XQueries according to the assignment guidelines but also made our use cases more 
 comprehensive. For instance, in this example, the relationship between external partners, 
